xymon ps client daily restart added

--- a/ansible/templates/xymonclient_config.xml
+++ b/ansible/templates/xymonclient_config.xml
@@ -2,8 +2,8 @@
 
   <servers>{{ xymon_server_ip }}</servers>
 
-  <clientlogfile>%TEMP%\xymonclient.log</clientlogfile>
-  <clientconfigfile>%ProgramFiles%\XymonPSClient\tmp\clientconfig.cfg</clientconfigfile>
+  <clientlogfile>C:\Program Files\XymonPSClient\xymonclient.log</clientlogfile>
+  <clientconfigfile>C:\Program Files\XymonPSClient\tmp\clientconfig.cfg</clientconfigfile>
 
   <clientfqdn>1</clientfqdn>
   <clientlower>1</clientlower>
